--- a/react/docs/시작하기.md
+++ b/react/docs/시작하기.md
@@ -1,13 +1,16 @@
-Docs: React 시작하기
-
+# Docs: React 시작하기
 https://ko.reactjs.org/docs/getting-started.html
 
 
-새로운 프로젝트 생성
-$ create-react-app my-app
+# 리액트 프로젝트 생성하기 - npx
+$ npx create-react-app 프로젝트명
 
-프로젝트 설치
-$ npm install
+# 리액트 프로젝트 생성하기 - npm
+$ npm init react-app 프로젝트명
 
-프로젝트 실행
-$ npm start
+# 리액트 프로젝트 생성하기 - Yarn
+$ yarn create react-app 프로젝트명
+
+
+# 리액트 서버 실행하기
+$ yarn start  또는  $ npm start
