--- a/django/파이썬 가상환경 설정.md
+++ b/django/파이썬 가상환경 설정.md
@@ -9,7 +9,7 @@ $ echo 'venv' >> .gitignore
 
 # 가상 환경 활성화
 
-$ source ./venv/Script/activate
+$ source ./venv/Scripts/activate
 
 ## 가상 환경 비활성화
 
@@ -18,7 +18,7 @@ $ deactivate
 
 # 가상 환경에 패키지 설치
 
-$ pip install requests
+$ pip install -r requirements.txt
 
 ## 가상 환경 패키지 정보 freeze
 
