--- a/django/django-python-web/파이썬 웹 프로그래밍.md
+++ b/django/django-python-web/파이썬 웹 프로그래밍.md
@@ -1,9 +1,14 @@
-## Do it! 점프 투 장고
+## 파이썬 웹 프로그래밍
 
 
 프로젝트 만들기
 
-$ django-admin startproject config .
+$ django-admin startproject mysite .
+
+
+애플리케이션 생성
+
+$ python manage.py startapp polls
 
 
 프로젝트 시작
