--- a/django/django-python-web/파이썬 웹 프로그래밍.md
+++ b/django/django-python-web/파이썬 웹 프로그래밍.md
@@ -11,6 +11,11 @@ $ django-admin startproject mysite .
 $ python manage.py startapp polls
 
 
+기본 테이블 생성
+
+$ python manage.py migrate
+
+
 프로젝트 시작
 
 $ python manage.py runserver
