--- a/django/django-python-web/파이썬 웹 프로그래밍.md
+++ b/django/django-python-web/파이썬 웹 프로그래밍.md
@@ -16,6 +16,12 @@ $ python manage.py startapp polls
 $ python manage.py migrate
 
 
+데이터베이스 변경사항 반영
+
+$ python manage.py makemigrations
+$ python manage.py migrate
+
+
 프로젝트 시작
 
 $ python manage.py runserver
