--- a/django/doit_JumpToDjango/점프 투 장고.md
+++ b/django/doit_JumpToDjango/점프 투 장고.md
@@ -6,6 +6,22 @@
 $ django-admin startproject config .
 
 
+애플리케이션 생성
+
+$ python manage.py startapp pybo
+
+
+기본 테이블 생성
+
+$ python manage.py migrate
+
+
+데이터베이스 변경사항 반영
+
+$ python manage.py makemigrations
+$ python manage.py migrate
+
+
 프로젝트 시작
 
 $ python manage.py runserver
