--- a/django/django-python-web/파이썬 웹 프로그래밍.md
+++ b/django/django-python-web/파이썬 웹 프로그래밍.md
@@ -1,27 +1,30 @@
 ## 파이썬 웹 프로그래밍
 
 
-프로젝트 만들기
+# 프로젝트 만들기
+
+$ mkdir 프로젝트명
+$ cd 프로젝트명
 
 $ django-admin startproject mysite .
 
 
-애플리케이션 생성
+# 애플리케이션 생성
 
 $ python manage.py startapp polls
 
 
-기본 테이블 생성
+# 기본 테이블 생성
 
 $ python manage.py migrate
 
 
-데이터베이스 변경사항 반영
+# 데이터베이스 변경사항 반영
 
 $ python manage.py makemigrations
 $ python manage.py migrate
 
 
-프로젝트 시작
+# 프로젝트 시작
 
 $ python manage.py runserver
