--- a/flask/python_backend/깔끔한 파이썬 탄탄한 백엔드.md
+++ b/flask/python_backend/깔끔한 파이썬 탄탄한 백엔드.md
@@ -3,7 +3,7 @@
 
 # 파이썬 가상 환경 생성
 
-$ conda create --name api python=3.8
+$ conda create --name venv python=3.8
 
 # 가상 환경 확인
 
@@ -12,13 +12,13 @@ $ conda env list
 
 # 가상 환경 진입 / 해제 (리눅스 맥 콘솔)
 
-$ source activate api
+$ source activate venv
 
 $ conda deactivate
 
 # 가상 환경 진입 / 해제 (윈도우 커맨드 라인)
 
-> conda activate api
+> conda activate venv
 
 > conda deactivate
 
