--- a/flask/파이썬 가상환경 설정.md
+++ b/flask/파이썬 가상환경 설정.md
@@ -2,7 +2,7 @@
 
 $ python -m venv venv
 
-## add venv folder to .gitignore
+# add venv folder to .gitignore
 
 $ echo 'venv' >> .gitignore
 
@@ -11,12 +11,12 @@ $ echo 'venv' >> .gitignore
 
 $ source ./venv/Scripts/activate
 
-## 가상 환경 비활성화
+# 가상 환경 비활성화
 
 $ deactivate
 
 
-## 가상 환경 패키지 정보 freeze
+# 가상 환경 패키지 정보 freeze
 
 $ pip freeze > requirements.txt
 
