--- a/django/django-python-web/파이썬 웹 프로그래밍.md
+++ b/django/django-python-web/파이썬 웹 프로그래밍.md
@@ -18,6 +18,10 @@ $ python manage.py startapp polls
 
 $ python manage.py migrate
 
+# 관리자 계정 생성
+
+$ python manage.py createsuperuser
+
 
 # 데이터베이스 변경사항 반영
 
