--- a/angular/angular-first/앵귤러 첫걸음.md
+++ b/angular/angular-first/앵귤러 첫걸음.md
@@ -1,7 +1,21 @@
 ## 앵귤러 첫걸음
 
+
 # 타입스크립트 설치
+
 $ npm i -g typescript
 
+
 # 앵귤러 커맨드 라인 툴 설치
+
 $ npm i -g @angular/cli
+
+
+# 새로운 프로젝트 생성
+
+$ ng new ng-welcome-msg-app
+
+
+# 프로젝트 실행
+
+$ ng serve
